--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <a href="https://www.linkedin.com/in/ananya-kanwar-5bb46a247/" target="_blank">
                     <img src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw" alt="LinkedIn" width="30" height="30">
                   </a>
-                  <a href="https://github.com/22BCS10579" target="_blank">
+                  <a href="https://github.com/AnanyaKanwar" target="_blank">
                     <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU" alt="github" width="30" height="30">
                   </a>
 
